src/objects/vlocity_ins__ScreeningRule__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__PriorityOrder__c</fullName>
        <label>Priority Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RuleDetail__c</fullName>
        <label>Rule Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ScreeningRuleGroupId__c</fullName>
        <label>Screening Rule Group</label>
        <referenceTo>vlocity_ins__ScreeningRuleGroup__c</referenceTo>
        <relationshipLabel>Screening Rules</relationshipLabel>
        <relationshipName>ScreeningRules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ValidateMethod__c</fullName>
        <inlineHelpText>Enter the Apex code here for the Validator Class to use to check the criteria specified in the detailed Rule Properties below. (More details on proper syntax in the Vlocity Public Sector Admin Configuration Guide.)</inlineHelpText>
        <label>Validate Method</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Validator__c</fullName>
        <inlineHelpText>Enter the Apex class that will be used to validate the Application against this particular Screening Rule. Either specify an existing class, or enter a new name and click button &apos;Generate Validator Class&apos; to create the class.</inlineHelpText>
        <label>Validator Class</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Screening Rule</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_ins__RuleDetail__c</columns>
        <columns>vlocity_ins__Validator__c</columns>
        <columns>vlocity_ins__PriorityOrder__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Screening Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>